objects/EUR_CRM_SKU__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Article_no__c</fullName>
        <label>Article no.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bottle_Size_Litre__c</fullName>
        <formula>EUR_CRM_Brand_Quality_Size__r.EUR_CRM_Bottle_Size__c</formula>
        <label>Bottle Size (Litre)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bottles_in_Carton__c</fullName>
        <label>Bottles in Carton</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bottles_per_Case__c</fullName>
        <label>Bottles per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cartons_in_Layer__c</fullName>
        <label>Cartons in Layer</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cartons_in_Pallet__c</fullName>
        <label>Cartons in Pallet</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cases_per_Pallet__c</fullName>
        <label>Cases per Pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contributive_Margin_SKU__c</fullName>
        <label>Contributive Margin / SKU</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Deal_Increment_1__c</fullName>
        <label>Deal Increment 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Deal_Increment_2__c</fullName>
        <label>Deal Increment 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Deal_Increment_3__c</fullName>
        <label>Deal Increment 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_EAN_Bottle__c</fullName>
        <label>EAN Bottle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_EAN_Carton__c</fullName>
        <label>EAN Carton</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Competitor__c</fullName>
        <formula>EUR_CRM_Brand_Quality_Size__r.EUR_CRM_Brand_Quality__r.EUR_CRM_Brand__r.EUR_CRM_Is_Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Limited_Edition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limited Edition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_List_Price__c</fullName>
        <label>List Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mixed_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mixed SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Modern_Trade_Price__c</fullName>
        <label>Modern Trade Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Modified_by_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modified by trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_Bottles__c</fullName>
        <label>Number of Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_SKU_ToDELETE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SKU</label>
        <referenceTo>SKU__c</referenceTo>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retail_Price__c</fullName>
        <label>Retail Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Description_1__c</fullName>
        <label>SKU Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Description_2__c</fullName>
        <label>SKU Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Spirit_Pct__c</fullName>
        <label>Spirit %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Level__c</fullName>
        <label>Stock Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stocking_Type__c</fullName>
        <label>Stocking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_T0_Price__c</fullName>
        <label>T0 Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_T1_Price__c</fullName>
        <label>T1 Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_T2_Price__c</fullName>
        <label>T2 Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Type_of_Box__c</fullName>
        <label>Type of Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display (Standard)</fullName>
                </value>
                <value>
                    <fullName>Display (Promotional)</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Quartet Pallet</fullName>
                </value>
                <value>
                    <fullName>Tray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VAT__c</fullName>
        <description>This is a new field created for MA for the calculation of price of SKU include VAT. 
Price * VAT%</description>
        <label>VAT%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_in_Litres__c</fullName>
        <label>Volume (in Litres)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesale_Price__c</fullName>
        <description>Initially for PR NG Traditional Bulk Breaker Account Sales Orders</description>
        <label>Wholesale Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SKU (EU)</label>
    <listViews>
        <fullName>EUR_AO_SKU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_EAN_Bottle__c</columns>
        <columns>EUR_CRM_Bottle_Size_Litre__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_List_Price__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Article_no__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_AO_SKU</value>
        </filters>
        <label>EUR AO SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_SKU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_AT_SKU</value>
        </filters>
        <label>EUR AT SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_SKUs</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_BE_SKU</value>
        </filters>
        <label>All BE SKUs</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_SKU</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_CH_SKU</value>
        </filters>
        <label>EUR CH SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_SKU_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Article_no__c</columns>
        <columns>EUR_CRM_SKU_Description_1__c</columns>
        <columns>EUR_CRM_SKU_Description_2__c</columns>
        <columns>EUR_CRM_EAN_Bottle__c</columns>
        <columns>EUR_CRM_EAN_Carton__c</columns>
        <columns>EUR_CRM_List_Price__c</columns>
        <columns>EUR_CRM_Unit_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_BG_SKU</value>
        </filters>
        <label>EUR BG SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_SKU_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Article_no__c</columns>
        <columns>EUR_CRM_SKU_Description_1__c</columns>
        <columns>EUR_CRM_SKU_Description_2__c</columns>
        <columns>EUR_CRM_EAN_Bottle__c</columns>
        <columns>EUR_CRM_EAN_Carton__c</columns>
        <columns>EUR_CRM_List_Price__c</columns>
        <columns>EUR_CRM_Unit_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_PT_SKU</value>
        </filters>
        <label>EUR PT All SKU View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_SKU</fullName>
        <columns>EUR_CRM_Bottles_in_Carton__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Unit_Type__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Article_no__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Number_of_Bottles__c</columns>
        <columns>EUR_CRM_SKU_Description_1__c</columns>
        <columns>EUR_CRM_SKU_Description_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_DE_SKU</value>
        </filters>
        <label>EUR DE SKU</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_DE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_SKU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Stock_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_DK_SKU</value>
        </filters>
        <label>EUR DK SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_SKU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Article_no__c</columns>
        <columns>EUR_CRM_Contributive_Margin_SKU__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_FI_SKU</value>
        </filters>
        <label>EUR FI SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_SKU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Unit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_KE_SKU</value>
        </filters>
        <label>EUR KE SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_SKU</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_EAN_Bottle__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_T0_Price__c</columns>
        <columns>EUR_CRM_T1_Price__c</columns>
        <columns>EUR_CRM_T2_Price__c</columns>
        <columns>EUR_CRM_T3_Price__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_MA_SKU</value>
        </filters>
        <label>EUR MA SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_SKU</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Modern_Trade_Price__c</columns>
        <columns>EUR_CRM_Retail_Price__c</columns>
        <columns>EUR_CRM_Wholesale_Price__c</columns>
        <columns>EUR_CRM_Unit_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_NG_SKU</value>
        </filters>
        <label>EUR NG SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_SKU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_Retail_Price__c</columns>
        <columns>EUR_CRM_Modern_Trade_Price__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_RU_SKU</value>
        </filters>
        <label>EUR RU SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_SKU</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Is_Competitor__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Deal_Increment_1__c</columns>
        <columns>EUR_CRM_Deal_Increment_2__c</columns>
        <columns>EUR_CRM_Deal_Increment_3__c</columns>
        <columns>EUR_CRM_Deal_Increment_4__c</columns>
        <columns>EUR_CRM_Retail_Price__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_SKU__c.EUR_ZA_SKU</value>
        </filters>
        <label>EUR ZA SKU</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKUs (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_SKU</fullName>
        <active>true</active>
        <label>EUR AO SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_SKU</fullName>
        <active>true</active>
        <label>EUR AT SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_SKU</fullName>
        <active>true</active>
        <label>EUR BE SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_SKU</fullName>
        <active>true</active>
        <label>EUR BG SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_SKU</fullName>
        <active>true</active>
        <label>EUR CH SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_SKU</fullName>
        <active>true</active>
        <label>EUR DE SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_SKU</fullName>
        <active>true</active>
        <description>Record Type for DK SKU</description>
        <label>EUR DK SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_SKU</fullName>
        <active>true</active>
        <label>EUR EE SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_SKU</fullName>
        <active>true</active>
        <label>EUR FI SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_SKU</fullName>
        <active>true</active>
        <label>GB SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_SKU</fullName>
        <active>true</active>
        <label>EUR KE SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_SKU</fullName>
        <active>true</active>
        <label>EUR LT SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_SKU</fullName>
        <active>true</active>
        <label>EUR_LV_SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_SKU</fullName>
        <active>true</active>
        <label>EUR MA SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_SKU</fullName>
        <active>true</active>
        <label>EUR NG SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_SKU</fullName>
        <active>true</active>
        <label>EUR PT SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_SKU</fullName>
        <active>true</active>
        <label>EUR RU SKU</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_SKU</fullName>
        <active>true</active>
        <label>EUR ZA SKU</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>